Fix headshot proportion on mobile

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -67,7 +67,7 @@ p {
     #headshot-img {
         border-radius: 50%;
         width: 80%;
-        height: auto;
+        height: 80%;
     }
     
     #about-me {
